# introdoc

./: README.md  pyproject.toml  requirements.txt
introdoc/: __main__.py
